--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: _s-materializecss
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Automattic's _s theme combined with the MaterializeCSS 1.0.0 framework.
+Theme URI: https://ndzynes.com
+Author: Nathan Parikh
+Author URI: https://ndzynes.com
+Description: Automattic's _s theme combined with the MaterializeCSS framework.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
